--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 	</parent>
 
 	<groupId>ru.kata</groupId>
-	<artifactId>spring-boot_security-demo</artifactId>
+	<artifactId>spring-project</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<name>spring-project</name>
-	<description>Project for Spring Boot</description>
+	<description>Project for Spring</description>
 
 	<properties>
 		<java.version>18</java.version>
